--- a/Code/WorkSpeed.DesktopClient/Resources/Window/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Window/DataTemplates.xaml
@@ -1,96 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:entities="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
-                    xmlns:grouping="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Grouping"
-                    xmlns:entities1="clr-namespace:WorkSpeed.DesktopClient.Views.Entities">
+                    xmlns:reportService="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService">
     
-    <DataTemplate DataType="{x:Type entities:EmployeeViewModel}">
-        <entities1:EmployeeView DataContext="{Binding}" />
+    <DataTemplate DataType="{x:Type reportService:FilterItemViewModel}">
+        <CheckBox Height="22" 
+                  Content="{Binding Name}"
+                  IsChecked="{Binding IsChecked}"
+                  Command="{Binding FilterCommand}"
+                  />
     </DataTemplate>
 
-    <DataTemplate DataType="{x:Type grouping:PositionGroupingViewModel}">
-        <ListBox Background="Transparent" BorderBrush="{x:Null}" Margin="0,5"
-                 HorizontalAlignment="Left" VerticalAlignment="Top"
-                 VerticalContentAlignment="Top"
-                 ItemsSource="{Binding Employees}"
-                 >
-            <ListBox.Template>
-                <ControlTemplate TargetType="ItemsControl">
-                    <Border>
-                        <ItemsPresenter />
-                    </Border>
-                </ControlTemplate>
-            </ListBox.Template>
-            <ListBox.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel MaxWidth="570" VerticalAlignment="Top" />
-                </ItemsPanelTemplate>
-            </ListBox.ItemsPanel>
-        </ListBox>
-
+    <DataTemplate DataType="{x:Type reportService:FilterElementViewModel}">
+        <ListBox ItemsSource="{Binding FilterItemVm}" />
     </DataTemplate>
 
-    <DataTemplate DataType="{x:Type grouping:AppointmentGroupingViewModel}">
-        <GroupBox Header="{Binding Name}" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <ListBox ItemsSource="{Binding Positions}"
-                     VerticalAlignment="Top"
-                     HorizontalAlignment="Left"
-                     Background="{x:Null}"
-                     BorderThickness="0"
-                     BorderBrush="{x:Null}"
-                     >
-                <ListBox.Template>
-                    <ControlTemplate TargetType="ItemsControl">
-                        <Border>
-                            <ItemsPresenter />
-                        </Border>
-                    </ControlTemplate>
-                </ListBox.Template>
-            </ListBox>
-        </GroupBox>
-    </DataTemplate>
-
-    <DataTemplate DataType="{x:Type grouping:ShiftGroupingViewModel}">
-        <GroupBox Header="{Binding Name}" Padding="10" IsHitTestVisible="True">
-            <ListBox ItemsSource="{Binding Appointments}"
-                     HorizontalAlignment="Left" VerticalAlignment="Top"
-                     Background="{x:Null}"
-                     BorderThickness="0"
-                     BorderBrush="{x:Null}"
-                     >
-                <ListBox.Template>
-                    <ControlTemplate TargetType="ItemsControl">
-                        <Border>
-                            <ItemsPresenter />
-                        </Border>
-                    </ControlTemplate>
-                </ListBox.Template>
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"
-                                    VerticalAlignment="Top"
-                                    HorizontalAlignment="Left"
-                                    
-                                    />
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListBoxItem">
-                                <Grid>
-                                        <ContentPresenter Content="{TemplateBinding Content}" 
-                                                        VerticalAlignment="Top"
-                                                        />
-                                </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
-        </GroupBox>
+    <DataTemplate DataType="{x:Type reportService:EntityFilterViewModel}">
+        <ListBox ItemsSource="{Binding FilterElementVmCollection}" />
     </DataTemplate>
 
 </ResourceDictionary>
