--- a/Code/WorkSpeed.DesktopClient/Resources/Templates/ProductivityDataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Templates/ProductivityDataTemplates.xaml
@@ -3,14 +3,15 @@
                     xmlns:vp="clr-namespace:WorkSpeed.DesktopClient.Views.Productivity"
                     xmlns:entities="clr-namespace:WorkSpeed.DesktopClient.Views.Entities"
                     xmlns:vme="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
-                    xmlns:vmp="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Productivity">
+                    xmlns:vmp="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Productivity"
+                    xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates">
     
     <DataTemplate DataType="{x:Type vmp:ProductivityViewModel}">
         <vp:ProductivityView />
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type vmp:EmployeeProductivityViewModel}">
-        <vp:EmployeeProductivityView />
+        <templates:EmployeeProductivityView />
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type vme:OperationViewModel}">
@@ -18,7 +19,7 @@
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type vme:EmployeeViewModel}">
-        <entities:EmployeeView />
+        <templates:EmployeeView />
     </DataTemplate>
 
 
