--- a/Code/WorkSpeed.DesktopClient/Resources/Templates/EmployeeReportDataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Templates/EmployeeReportDataTemplates.xaml
@@ -2,10 +2,11 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:entities="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
                     xmlns:grouping="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Grouping"
-                    xmlns:entities1="clr-namespace:WorkSpeed.DesktopClient.Views.Entities">
+                    xmlns:entities1="clr-namespace:WorkSpeed.DesktopClient.Views.Entities"
+                    xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates">
     
     <DataTemplate DataType="{x:Type entities:EmployeeViewModel}">
-        <entities1:EmployeeView DataContext="{Binding}" />
+        <templates:EmployeeView DataContext="{Binding}" />
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type grouping:PositionGroupingViewModel}">
