--- a/Code/WorkSpeed.DesktopClient/Resources/Templates/FilterDataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Templates/FilterDataTemplates.xaml
@@ -1,16 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:rs="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService">
+                    xmlns:rs="clr-namespace:WorkSpeed.DesktopClient.ViewModels.ReportService"
+                    xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates">
 
     <DataTemplate DataType="{x:Type rs:FilterItemViewModel}">
-        <CheckBox Height="22" 
+        <CheckBox Height="22"
+                  Foreground="Black"
                   Content="{Binding Caption}"
                   IsChecked="{Binding IsChecked}"
                   />
     </DataTemplate>
 
-    <DataTemplate DataType="{x:Type rs:EntityFilterViewModel}">
-        <ListBox ItemsSource="{Binding FilterItemVmCollection}" />
+    <DataTemplate DataType="{x:Type rs:FilterViewModel}">
+        <templates:FilterSectionView />
     </DataTemplate>
 
 </ResourceDictionary>
