--- a/Code/WorkSpeed.DesktopClient/Views/Templates/EmployeeProductivityView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/Templates/EmployeeProductivityView.xaml
@@ -1,9 +1,9 @@
-﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.Productivity.EmployeeProductivityView"
+﻿<Grid x:Class="WorkSpeed.DesktopClient.Views.Templates.EmployeeProductivityView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:ent="clr-namespace:WorkSpeed.DesktopClient.Views.Entities"
+      xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates"
       mc:Ignorable="d" 
       >
 
@@ -12,7 +12,7 @@
         <ColumnDefinition Width="Auto" />
     </Grid.ColumnDefinitions>
 
-    <ent:EmployeeView DataContext="{Binding EmployeeVm}" />
+    <templates:EmployeeView DataContext="{Binding EmployeeVm}" />
     <ListBox Grid.Column="1" ItemsSource="{Binding ProductivityVms}" BorderThickness="0,1,0,0" >
          <ListBox.ItemsPanel>
             <ItemsPanelTemplate>
