--- a/Code/WorkSpeed.DesktopClient/Views/Templates/EmployeeView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/Templates/EmployeeView.xaml
@@ -1,4 +1,4 @@
-﻿<Border x:Class="WorkSpeed.DesktopClient.Views.Entities.EmployeeView"
+﻿<Border x:Class="WorkSpeed.DesktopClient.Views.Templates.EmployeeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
