--- a/Code/WorkSpeed.DesktopClient/Resources/Styles/GroupBoxStyle.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Styles/GroupBoxStyle.xaml
@@ -1,58 +1,56 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
+    <BorderGapMaskConverter x:Key="BorderGapMaskConverter"/>
     
 
     <Style TargetType="{x:Type GroupBox}">
-        <Setter Property="OverridesDefaultStyle" Value="True" />
         <Setter Property="BorderBrush" Value="{StaticResource br_Window.Border}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="Foreground" Value="{StaticResource br_Window.ForegroundAlternative}" />
         <Setter Property="Template">
             <Setter.Value>
-
-                <ControlTemplate TargetType="GroupBox">
-                    <Grid SnapsToDevicePixels="True">
+                <ControlTemplate TargetType="{x:Type GroupBox}">
+                    <Grid SnapsToDevicePixels="true">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="6" />
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="5" />
+                            <ColumnDefinition Width="6"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="6"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="5" />
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="6"/>
                         </Grid.RowDefinitions>
-
-                            <Border Grid.Row="1" Grid.ColumnSpan="4" Grid.RowSpan="3" BorderThickness="{TemplateBinding Border.BorderThickness}" 
-                                    CornerRadius="3,3,3,3" 
-                                    BorderBrush="{TemplateBinding Border.BorderBrush}" />
-
-                        <Border Name="Header" Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" 
-                                Padding="3,1,3,0" Background="{TemplateBinding Panel.Background}"
+                        <Border Grid.ColumnSpan="4" Grid.Column="0" CornerRadius="4" Grid.Row="1" Grid.RowSpan="3" 
+                                    BorderBrush="Transparent" 
+                                    BorderThickness="{TemplateBinding BorderThickness}" 
+                                    Background="{TemplateBinding Background}" />
+                        <Border Grid.ColumnSpan="4" CornerRadius="4" Grid.Row="1" Grid.RowSpan="3" 
+                                BorderBrush="Transparent" 
+                                BorderThickness="{TemplateBinding BorderThickness}" 
                                 >
-                            <ContentPresenter RecognizesAccessKey="True" 
-                                              Content="{TemplateBinding HeaderedContentControl.Header}" 
-                                              ContentTemplate="{TemplateBinding HeaderedContentControl.HeaderTemplate}" 
-                                              ContentStringFormat="{TemplateBinding HeaderedContentControl.HeaderStringFormat}" 
-                                              ContentSource="Header" 
-                                              SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                            <Border.OpacityMask>
+                                <MultiBinding ConverterParameter="7" Converter="{StaticResource BorderGapMaskConverter}">
+                                    <Binding ElementName="Header" Path="ActualWidth"/>
+                                    <Binding Path="ActualWidth" RelativeSource="{RelativeSource Self}"/>
+                                    <Binding Path="ActualHeight" RelativeSource="{RelativeSource Self}"/>
+                                </MultiBinding>
+                            </Border.OpacityMask>
+                            <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="3">
+                                <Border BorderBrush="Transparent" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="2"/>
+                            </Border>
                         </Border>
-
-                        <ContentPresenter Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" 
-                                          Content="{TemplateBinding ContentControl.Content}" 
-                                          ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" 
-                                          ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}" 
-                                          Margin="{TemplateBinding Control.Padding}" 
-                                          SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}"  />
-                        </Grid>
-                    </ControlTemplate>
-
+                        <Border x:Name="Header" Grid.Column="1" Padding="3,1,3,0" Grid.Row="0" Grid.RowSpan="2">
+                            <ContentPresenter ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </Border>
+                        <ContentPresenter Grid.ColumnSpan="2" Grid.Column="1" Margin="{TemplateBinding Padding}" Grid.Row="2" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                    </Grid>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
-
     </Style>
 </ResourceDictionary>
