--- a/Code/WorkSpeed.DesktopClient/Resources/Styles/ListBoxStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Styles/ListBoxStyles.xaml
@@ -8,7 +8,12 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <ContentPresenter />
+                    <ContentPresenter Content="{TemplateBinding ContentControl.Content}" 
+                                      ContentTemplate="{TemplateBinding ContentControl.ContentTemplate}" 
+                                      ContentStringFormat="{TemplateBinding ContentControl.ContentStringFormat}" 
+                                      HorizontalAlignment="{TemplateBinding Control.HorizontalContentAlignment}" 
+                                      VerticalAlignment="{TemplateBinding Control.VerticalContentAlignment}" 
+                                      SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
@@ -20,7 +25,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBox}">
-                    <ItemsPresenter />
+                    <ItemsPresenter SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
