--- a/Code/WorkSpeed.DesktopClient/Resources/Templates/EmployeeReportDataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Templates/EmployeeReportDataTemplates.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:entities="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
                     xmlns:grouping="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Grouping"
-                    xmlns:entities1="clr-namespace:WorkSpeed.DesktopClient.Views.Entities"
+                    xmlns:v="clr-namespace:WorkSpeed.DesktopClient.Views.Templates"
                     xmlns:templates="clr-namespace:WorkSpeed.DesktopClient.Views.Templates">
     
     <DataTemplate DataType="{x:Type entities:EmployeeViewModel}">
@@ -52,46 +52,7 @@
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type grouping:ShiftGroupingViewModel}">
-        <GroupBox Header="{Binding Name}" Padding="10" IsHitTestVisible="True">
-            <ListBox ItemsSource="{Binding AppointmentGroupingVmCollection}"
-                     HorizontalAlignment="Left" VerticalAlignment="Top"
-                     Background="{x:Null}"
-                     BorderThickness="0"
-                     BorderBrush="{x:Null}"
-                     >
-                <ListBox.Template>
-                    <ControlTemplate TargetType="ItemsControl">
-                        <Border>
-                            <ItemsPresenter />
-                        </Border>
-                    </ControlTemplate>
-                </ListBox.Template>
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"
-                                    VerticalAlignment="Top"
-                                    HorizontalAlignment="Left"
-                                    
-                                    />
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListBoxItem">
-                                    <Grid>
-                                        <ContentPresenter Content="{TemplateBinding Content}" 
-                                                        VerticalAlignment="Top"
-                                                        />
-                                    </Grid>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-            </ListBox>
-        </GroupBox>
+        <v:ShiftGroupingView />
     </DataTemplate>
 
 </ResourceDictionary>
