--- a/Code/WorkSpeed.DesktopClient/App.xaml
+++ b/Code/WorkSpeed.DesktopClient/App.xaml
@@ -2,9 +2,15 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WorkSpeed.DesktopClient"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              >
     <Application.Resources>
-         <ResourceDictionary>
+
+
+        <ResourceDictionary>
+            <sys:Double x:Key="d_EmployeeCardWidth">266</sys:Double>
+            <sys:Double x:Key="d_EmployeeCardHeight">121</sys:Double>
+
              <ResourceDictionary.MergedDictionaries>
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/Fonts.xaml" />
                  <ResourceDictionary Source="pack://application:,,,/WorkSpeed.DesktopClient;component/Resources/Colors.xaml" />
