--- a/Code/WorkSpeed.DesktopClient/Views/Templates/EmployeeView.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/Templates/EmployeeView.xaml
@@ -1,20 +1,22 @@
 ﻿<Border x:Class="WorkSpeed.DesktopClient.Views.Templates.EmployeeView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:conv="clr-namespace:WorkSpeed.DesktopClient.Converters"
-             xmlns:ent="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             d:DataContext="{d:DesignInstance ent:EmployeeViewModel}"
-             TextElement.FontFamily="{StaticResource font_Rubik}"
-             Width="266" Height="121" Margin="2,5"
-             Padding="0"
-             IsHitTestVisible="True"
-            BorderThickness="1" 
-            BorderBrush="{StaticResource br_Window.Border}"
-             >
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:conv="clr-namespace:WorkSpeed.DesktopClient.Converters"
+        xmlns:ent="clr-namespace:WorkSpeed.DesktopClient.ViewModels.Entities"
+        mc:Ignorable="d" 
+        d:DesignHeight="450" d:DesignWidth="800"
+        d:DataContext="{d:DesignInstance ent:EmployeeViewModel}"
+        TextElement.FontFamily="{StaticResource font_Rubik}"
+        Width="{StaticResource d_EmployeeCardWidth}" 
+        Height="{StaticResource d_EmployeeCardHeight}" 
+        Margin="2,5"
+        Padding="0"
+        IsHitTestVisible="True"
+        BorderThickness="1" 
+        BorderBrush="{StaticResource br_Window.Border}"
+        >
     <Border.Resources>
         <conv:ImageConverter x:Key="conv_ImageConverter" />
         <conv:AbbreviationsConverter x:Key="conv_AbbreviationConverter" />
