--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/EmployeeReportUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/EmployeeReportUserControl.xaml
@@ -8,6 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance local:EmployeeReportViewModel}"
+             Margin="5,10,0,0"
              >
     <UserControl.Resources>
         <conv:TabControlHeightConverter x:Key="conv_TabControlConverter" />
