--- a/Code/WorkSpeed.DesktopClient/Views/UserControls/EmployeeReportUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/UserControls/EmployeeReportUserControl.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance local:EmployeeReportViewModel}"
-             Margin="5,10,0,0"
+             
              >
     <UserControl.Resources>
         <conv:TabControlHeightConverter x:Key="conv_TabControlConverter" />
@@ -23,13 +23,14 @@
             </MultiBinding>
         </Grid.Height>
 
-        <ScrollViewer HorizontalScrollBarVisibility="Visible">
+        <ScrollViewer HorizontalScrollBarVisibility="Visible" Padding="5,10,0,0">
             <ListBox ItemsSource="{Binding ShiftGroupingVmCollection}"
                      Height="Auto" Width="Auto" 
                      HorizontalAlignment="Left" VerticalAlignment="Top"
                      Background="{x:Null}"
                      BorderThickness="0" BorderBrush="{x:Null}"
                      VerticalContentAlignment="Top"
+                     
                      >
                 <ListBox.Template>
                     <ControlTemplate TargetType="ItemsControl">
